# teyjus

./: .gitattributes  .gitignore  CHANGES  Makefile  OMakefile  OMakeroot  QUICKSTART  README  README.md  RELEASE  TODO_IO  dune-project  errormsg.ml  preabsyn.ml  teyjus.opam
emacs/: teyjus.el
implnotes/: bytecode.txt  dataformat.txt  instset.txt  loader_interface.txt  new-expectations.txt
issue1/: a.sig  root.sig
issue2/: root.sig
lyacc/: Makefile  blists.sig  control.mod  lambdayacc.mod  lambdayacc.sig  lpgram.mod  lyaccshares.mod  maps.sig  parser.sig  string.mod
new-teyjus/: OMakefile  lp-yacc.mly
new-teyjus/source/linker/: CallResolution.h  Makefile.am  OMakefile  VectorRW.c  bvrtab.c  bvrtab.h  code.c  code.h  const.c  const.h  datatypes.h  deps.c  file.c  file.h  hashtab.c  hashtab.h  implgoal.c  implgoal.h  importtab.c  importtab.h  kind.c  kind.h  main.c  module.c  module.h  rename.c  rename.h  searchtab.h  stringspace.c  stringspace.h  toplevel.h  tree.c  tree.h  tyskel.c  tyskel.h  vector.c  vector.h
new-teyjus/source/linker/test/: Makefile.am  TestConst.c  TestInits.c  TestKind.c  TestModule.c  TestModule.h  TestString.c  TestTySkel.c
new-teyjus/source/linker/testing/: README  testfile.c
scratch/: accumsig2.sig  modtest.sig  parens.mod  separatecomp.sig
source/: OMakefile  README  Teyjus.sln
source/compiler/: OMakefile  README  absyn.ml  absyn.mli  annvariables.ml  annvariables.mli  bytecode.ml  bytecode.mli  clausegen.ml  clausegen.mli  clauses.ml  clauses.mli  codegen.ml  codegen.mli  compile.ml  compile.mli  compilequery.ml  compilequery.mli  dune  errormsg.ml  errormsg.mli  explicify.ml  explicify.mli  explicit.ml  explicit.mli  instr.ml  instr.mli  lplex.mll  lpyacc.mly  main.ml  main.mli  makefile  option.ml  option.mli  parse.ml  parse.mli  pervasive.ml  pervasive.mli  pervasiveutils.ml  pervasiveutils.mli  (+24 more)
source/front/: README  buildterm.ml  buildterm.mli  ccode_stubs.c  ccode_stubs.ml  ccode_stubs.mli  ccode_stubs_c.c  compilerfront.ml  dependfront.ml  disassemblerfront.ml  dune  front.ml  front.mli  front_c.c  front_c.h  io.ml  io.mli  io_c.c  io_c.h  lfquery.ml  lfquery.mli  linker_c.c  linkerfront.ml  loader.ml  makefile  module.ml  module.mli  ocaml_wrap.c  ocaml_wrap.h  parseTwelf.ml  parseTwelf.mli  parseargs.ml  parseargs.mli  parsefront.ml  query.ml  query.mli  query_c.c  query_c.h  readterm.ml  readterm.mli  (+8 more)
source/front/caml/: config.h  fail.h
source/include/: argp.h  byteswap.c  byteswap.h  dune  getopt.h  obstack.h  search.h  standardlib.h  tsearch.c
source/linker/: CallResolution.c  CallResolution.h  Makefile.am  OMakefile  VectorRW.c  VectorRW.h  bvrtab.c  bvrtab.h  code.c  code.h  const.c  const.h  datatypes.h  deps.h  dune  file.c  file.h  hashtab.c  hashtab.h  implgoal.c  implgoal.h  importtab.c  importtab.h  kind.c  kind.h  linker_message.c  linker_message.h  main.c  message.c  message.h  module.c  module.h  rename.c  rename.h  stringspace.c  stringspace.h  tree.c  tree.h  tyskel.c  tyskel.h  (+2 more)
source/linker/test/: Makefile.am  TestCode.c  TestConst.c  TestFile.c  TestImportTab.c  TestInits.c  TestKind.c  TestModule.c  TestModule.h
source/linker/testing/: testfile.c
source/loader/: OMakefile  addcode.c  bvrtab.c  bvrtab.h  code.c  code.h  const.c  const.h  dune  file.c  file.h  hashtab.c  hashtab.h  implgoal.c  implgoal.h  importtab.c  importtab.h  kind.c  kind.h  ld_message.h  loader.c  loader.h  loadmodtab.ml  loadmodtab.mli  loadquery.c  loadquery.h  main.c  readutil.ml  searchtab.c  searchtab.h  strings.c  strings.h  tyskel.c  tyskel.h
source/loader/test/: Makefile.am  TestBvrtab.c  TestConst.c  TestHashtab.c  TestKind.c  TestString.c  TestTySkel.c
source/simulator/: README  abstmachine.c  abstmachine.h  dataformat.c  dataformat.h  dataformats.c  dataformats.h  dune  hnorm.c  hnorm.h  hnormlocal.c  hnormlocal.h  hopu.c  hopu.h  instraccess.h  io-datastructures.c  io-datastructures.h  mcstring.c  mcstring.h  mctypes.h  myinstructions.h  printterm.c  printterm.h  simdispatch.c  simdispatch.h  siminit.c  siminit.h  siminstr.c  siminstr.h  siminstrlocal.c  siminstrlocal.h  simulator.c  simulator.h  trail.c  trail.h  types.c  types.h
source/simulator/builtins/: README  builtins.c  builtins.h  compexp.c  compexp.h  dune  evalexp.c  evalexp.h  io.c  io.h  meta.c  meta.h  readterm.c  readterm.h
source/tables/: dune  instructions.c  instructions.h  pervasives.c  pervasives.h  pervinit.c  pervinit.h
source/tables_gen/instrformats/: dune  instrformats.l  instrformats.y  instrformats_32.in  instrformats_64.in  instrgen-c.c  instrgen-c.h  instrgen-ocaml.c  instrgen-ocaml.h  makefile
source/tables_gen/pervasives/: OMakefile  Pervasives.sln  Pervasives.vcproj  ccode.c  dune  makefile  ocamlcode.c  ocamlcode.h  op.c  pervasives.in  pervasives.l  pervasives.y  pervgen-c.c  pervgen-c.h  pervgen-ocaml.c  pervgen-ocaml.h  types.c
source/test/system_tests/hocompiler/: Makefile.am  bobabsyn.dis  bobabsyn.mod  bobcatgram.dis  bobparser.dis  comp.t  expected  realsparc.dis  realsparc.mod  test4.s-exp  test5_st.s  test7_st.s  typecat.dis
source/test/system_tests/hocompiler/CVS/: Entries  Repository
tmp-docs/: mod-grammar.txt
trunk/: OMakefile
trunk/source/loader/: Makefile.am  OMakefile  README  bvrtab.c  code.c  code.h  const.c  file.c  file.h  hashtab.c  hashtab.h  implgoal.c  implgoal.h  importtab.c  kind.c  ld_message.h  loader.c  loader.h  loadmodtab.ml  loadmodtab.mli  main.c  searchtab.c  searchtab.h  strings.c  strings.h  tyskel.c  tyskel.h
trunk/source/loader/test/: Makefile.am  TestFile.c
wiki/: AboutTeyjus.wiki  AbstractMachine.wiki  BuildOverview.wiki  ComparisonPreds.wiki  ContactingTheAuthors.wiki  CygwinBuild.wiki  DebuggingHints.wiki  Downloads.wiki  Examples.wiki  Invoking.wiki  IoPreds.wiki  LambdaProlog.wiki  LinuxBuild.wiki  LogicalConsts.wiki  Makefile  ManipulatingFormulas.wiki  ManipulatingPrograms.wiki  MicrosoftBuild.wiki  ModSyntax.wiki  ModSyntaxRenaming.wiki  PeopleInvolved.wiki  PervasiveConstants.wiki  ProgramStructure.wiki  ProjectSupport.wiki  QuickStart.wiki  SigAnnotation.wiki  (+15 more)
(+1869 files in other folders)
