(library
 (name compiler)
 (wrapped false)
 (libraries simulator pervasives)
 (modules
   clauses
   absyn
   symbol
   table
   option
   preabsyn
   pervasive
   types
   pervasiveutils
   parse
   translate
   compile
   instr
   bytecode
   lpyacc
   lplex
   typereduction
   processclauses
   annvariables
   codegen
   registers
   clausegen
   explicit
   spitcode
   errormsg)

 ;; for tracing, set environment variable
 ;; OCAML_LANDMARKS=auto,debug,format=json,output=profile.json
 (preprocess (pps landmarks-ppx --auto))
)

(rule
 (targets pervasive.ml pervasive.mli)
 (deps ../tables_gen/pervasives/perv_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/pervasives/
   (run ./perv_gen pervasives.in))))

(rule
 (targets instr.ml instr.mli)
 (deps ../tables_gen/instrformats/instr_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/instrformats/
   (run ./instr_gen))))

(ocamllex lplex)

(ocamlyacc lpyacc)
