(library
 (name compiler)
 (wrapped false)
 (libraries simulator pervasives))

(rule
 (targets pervasive.ml pervasive.mli)
 (deps ../tables_gen/pervasives/perv_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/pervasives/
   (run ./perv_gen pervasives.in))))

(rule
 (targets instr.ml instr.mli)
 (deps ../tables_gen/instrformats/instr_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/instrformats/
   (run ./instr_gen))))

(ocamllex lplex)

(ocamlyacc lpyacc)


(env
 (dev
  (flags (:standard -w
           -27-32-38-39-34-50
           ;; 27: unused variable
           ;; 32: unused variable declaration
           ;; 38: unused exception
           ;; 39: unused rec flag
           ;; 34: unused type declaration
           ;; 50: unexpected docstring
   )
)))
