(* -*- tuareg -*- *)

let is_mac_os () =
  (List.assoc "system" Jbuild_plugin.V1.ocamlc_config) = "macosx"

let mac_os_instr = {|
(library
 (name include)
 (foreign_stubs
  (language c)
  (names byteswap obstack search)))
|}

let non_mac_instr = {|
(library
 (name include))
|}

let () = Jbuild_plugin.V1.send (if is_mac_os () then mac_os_instr else non_mac_instr)
