(library
 (name loader)
 (wrapped false)
 (libraries compiler)
 (foreign_stubs
  (language c)
   ; (flags -std=c99)
  ; (flags -Wimplicit-function-declaration)
  (names
   bvrtab
   code
   const
   file
   hashtab
   implgoal
   importtab
   kind
   loader
   searchtab
   strings
   tyskel
   loadquery)))
