(library
 (name loader)
 (wrapped false)
 (libraries compiler)
 (foreign_stubs
  (language c)
  (names
   bvrtab
   code
   const
   file
   hashtab
   implgoal
   importtab
   kind
   loader
   searchtab
   strings
   tyskel
   loadquery)))

(env
 (dev
  (flags (:standard -w
           -27
           ;; 27: unused variable
   )
)))
