(library
 (name tables)
 (libraries pervasives compiler))

(rule
 (targets pervasives.h pervasives.c)
 (deps ../tables_gen/pervasives/perv_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/pervasives/
   (run ./perv_gen pervasives.in))))

(rule
 (targets instructions.h instructions.c)
 (deps ../tables_gen/instrformats/instr_gen)
 (mode fallback)
 (action
  (chdir
   ../tables_gen/instrformats/
   (run ./instr_gen))))
