EXAMPLE_FILES  = README             \
                 absparc.mod        \
                 absparc.sig        \
                 bobabsyn.mod       \
                 bobabsyn.sig       \
                 bobcatgram.mod     \
                 bobcatgram.sig     \
                 bobparser.mod      \
                 bobparser.sig      \
                 kitty.mod          \
                 kitty.sig          \
                 lambdayacc.mod     \
                 lambdayacc.sig     \
                 realsparc.mod      \
                 realsparc.sig      \
                 test2.bob          \
                 test3.bob          \
                 test3_st.s         \
                 test4.bob          \
                 test4_st.s         \
                 test5.bob          \
                 test5_st.s         \
                 test6.bob          \
                 test6_st.s         \
                 test7.bob          \
                 test7_st.s         \
                 test8.bob          \
                 typecat.mod        \
                 typecat.sig

EXAMPLE_BINARIES = absparc.lp        \
                   bobabsyn.lp       \
                   bobcatgram.lp     \
                   bobparser.lp      \
                   kitty.lp          \
                   lambdayacc.lp     \
                   realsparc.lp      \
                   typecat.lp       

include $(top_srcdir)/testing/testcases/examples.am

maintainer-clean-local:
	rm -f Makefile.in